<resources>
    <string name="app_name">qhatu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_qhatu">Logo_Qhatu</string>
    <string name="menu_icon">Menu icon</string>
    <string name="bg_menu">Bg menu</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_history">Historial de compras</string>
    <string name="menu_actual_p">Compra actual</string>
    <string name="menu_list_p">Lista de compras</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="p_list_title">Tu Lista de Compras</string>
    <string name="p_list_product_title">Lacteos</string>
    <string name="p_list_product_detail_title">Detalle de 1 leche gloria de 1L</string>
    <string name="order_request_button">Agendar orden</string>
    <string name="date_request_button">Solicitar cita</string>
    <string name="ete_product_name">Ingresa un producto</string>

    <string-array name="deliver_date">
        <item>Elige una fecha de entrega</item>
        <item>11 de Mayo, 9:00 am</item>
        <item>11 de Mayo, 10:00 am</item>
        <item>11 de Mayo, 11:00 am</item>
    </string-array>

    <string-array name="payment_method">
        <item>Tarjeta</item>
        <item>Efectivo</item>
    </string-array>

    <string-array name="markets">
        <item>Wong</item>
        <item>Metro</item>
    </string-array>

    <string-array name="mediums">
        <item>Videoconferencia</item>
        <item>Domicilio</item>
    </string-array>

    <string-array name="meeting_dates">
        <item>10 de marzo, 11:00am</item>
        <item>10 de marzo, 12:00m</item>
    </string-array>

    <string-array name="measurement_unit">
        <item>Kg.</item>
        <item>mg.</item>
        <item>L.</item>
        <item>ml.</item>
    </string-array>

    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="dialog_product_name">Nombre del producto</string>
    <string name="dialog_product_quantity">Cantidad</string>
    <string name="dialog_measurement_unit">Unidad de medida</string>
    <string name="dialog_measurement_quantity">Cantidad de medida</string>
    <string name="dialog_detail">Detalle</string>
    <string name="dialog_detail_hint">Detalle su producto</string>
    <string name="dialog_product_preview">Modifica los campos para ver tu pedido.</string>
    <string name="dialog_add_product">Agregar</string>
    <string name="dialog_sorry_text">Nos disculpamos por inconveniente causado. Como startup preocupada por la experiencia de nuestros usuarios, iniciaremos una investigació sobre el caso. Nos comunicaremos con usted en un rango de 24-48 horas. Confirme su denuncia por favor, o en todo caso cancele el proceso.</string>
    <string name="dialog_cancel_button">Cancelar</string>
    <string name="dialog_complaint_button">Denunciar</string>
    <string name="dialog_what_happened">Cuentanos, ¿Que paso?</string>
    <string name="dialog_complaint_hint">Detalla el suceso aqui</string>
    <string name="dialog_wait">¡Un momento!</string>
    <string name="dialog_wait_text">Al presionar eliminar usted eliminara 1 leche gloria de 1 litro de su lista de productos. Este cambio no puede ser revertido. Pero si puede volver a anadir el producto cuando desee.</string>
    <string name="dialog_delete_button">Eliminar</string>
    <string name="dialog_ups">¡Ups! Algo ha salido mal. Intente nuevamente</string>
    <string name="dialog_close">Cerrar</string>
    <string name="dialog_rate_comment_hint">Dejanos un comentario...</string>
    <string name="dialog_rate_button">Calificar</string>
    <string name="dialog_meeting_date">Fecha de cita</string>
    <string name="dialog_meeting_medium">Medio</string>
    <string name="dialog_meeting_advice">La cita con la fecha y el medio elegido seran enviados al correo electronico proporcionado.</string>
    <string name="dialog_request_meeting_button">Solicitar cita</string>
    <string name="dialog_deliver_date">Fecha de recepcion</string>
    <string name="dialog_payment_method">Pago</string>
    <string name="dialog_market">Super Mercado</string>
    <string name="dialog_order_request_advice">Se le entregara el pedido en su domicilio vigente en la fecha indicada.</string>
    <string name="dialog_order_button">Ordenar</string>
    <string name="dialog_complaint_success">Denuncia procesada exitosamente.</string>
    <string name="dialog_success">¡Proceso exitoso!</string>
    <string name="dialog_accept_button">Aceptar</string>
    <string name="dialog_thanks">Gracias por calificar nuestro servicio y ayudarnos a mejorarlo para ti</string>
    <string name="dialog_what_to_do">¿Que desea hacer con el producto?</string>
    <string name="dialog_disable">Deshabilitar</string>
    <string name="purchase_list">Tu lista de compras</string>
    <string name="delivery_duo">Tu duo de entrega</string>
    <string name="order_detail_title">Detalle de tu pedido</string>
    <string name="order_deliver_date">Fecha de entrega</string>
    <string name="deliver_date_text">10 de marzo a las 9:00am</string>
    <string name="purchase_ticket">Boleta de compra</string>
    <string name="purchase_ticket_value">Compra pendiente</string>
    <string name="service_cost">Costo de servicio</string>
    <string name="service_cost_value">S/. 15.00</string>
    <string name="order_state">Estado</string>
    <string name="order_state_value">En camino</string>
    <string name="supermarket">Super Mercado</string>
    <string name="supermarket_selected">Wong</string>
    <string name="deliver_duo_title">Conoce a tu duo de entrega</string>
    <string name="duo_names">Nombres</string>
    <string name="duo_names_text">Vicente Rivera y Ricardo Reyes</string>
    <string name="duo_phones">Celulares</string>
    <string name="duo_phones_text">999888777 - 999444555</string>
    <string name="duo_car_model">Modelo de carro</string>
    <string name="duo_car_model_text">Toyota Yaris Negro 2016</string>
    <string name="duo_car_plate">Placa de carro</string>
    <string name="duo_car_plate_text">HVC-21D</string>
    <string name="user_names">Nombres</string>
    <string name="user_names_text">Luis Eduardo Ricardo</string>
    <string name="user_surname">Apellidos</string>
    <string name="user_surname_text">Rivera Diaz</string>
    <string name="user_phone">Celular</string>
    <string name="user_phone_text">987420884</string>
    <string name="user_mail">Email</string>
    <string name="user_mail_text">luisriveradiaz1699@gmail.com</string>
    <string name="user_address">Dirección</string>
    <string name="user_address_text">Jr. Mariscal Ramon Castilla 783 Edificio H Dpto 501</string>
    <string name="user_purchase_list">Mi lista de compras</string>
    <string name="signout_button">Cerrar Sesión</string>
    <string name="historic_purchases">Pedidos Historicos</string>
    <string name="detail_text">La roja por favor.</string>
    <string name="item_category">Lacteos</string>
    <string name="item_purchase_historic_date">10 de marzo a las 9:00am</string>
    <string name="item_product_name">1 leche gloria de 1L</string>
    <string name="register_message">Para poder registrarte debes haber hecho por lo menos una compra con nosotros. Si lo deseas hacer, por favor ponte en contacto con nosotros en qhatu-peru.pe</string>
</resources>