<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile_icon"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/purchaseHistoryFragment"
            android:icon="@drawable/ic_history_icon"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/currentPurchaseFragment"
            android:icon="@drawable/ic_actual_p_icon"
            android:title="@string/menu_actual_p" />
        <item
            android:id="@+id/purchaseListFragment"
            android:icon="@drawable/ic_list_p_icon"
            android:title="@string/menu_list_p" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/closeSessionIcon"
                android:icon="@drawable/ic_close_session_icon"
                android:title="@string/close_session">
            </item>
        </menu>
    </item>


</menu>