<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/teviOrderDuo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deliver_duo_title"
        android:textAppearance="@style/sectitle"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/border_bottom"/>

    <RelativeLayout
        android:id="@+id/relaOrderDuo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/teviOrderDuo"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="18dp">

        <ImageView
            android:id="@+id/iviOrderDuo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/image_duo"/>

        <RelativeLayout
            android:id="@+id/relaDuoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_below="@id/iviOrderDuo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duo_names"
                android:textAppearance="@style/item_list_name"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/teviDuoName"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/duo_names_text"
                android:layout_alignParentRight="true"
                android:textAlignment="viewEnd"
                android:gravity="end"
                android:textAppearance="@style/normal_text"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relaDuoPhones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_below="@id/relaDuoName">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duo_phones"
                android:textAppearance="@style/item_list_name"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/teviDuoPhones"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/duo_phones_text"
                android:layout_alignParentRight="true"
                android:textAlignment="viewEnd"
                android:gravity="end"
                android:textAppearance="@style/normal_text"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relaDuoCarModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_below="@id/relaDuoPhones">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duo_car_model"
                android:textAppearance="@style/item_list_name"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/teviDuoCarModel"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/duo_car_model_text"
                android:layout_alignParentRight="true"
                android:textAlignment="viewEnd"
                android:gravity="end"
                android:textAppearance="@style/normal_text"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relaDuoCarPlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_below="@id/relaDuoCarModel">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duo_car_plate"
                android:textAppearance="@style/item_list_name"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/teviDuoCarPlate"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/duo_car_plate_text"
                android:layout_alignParentRight="true"
                android:textAlignment="viewEnd"
                android:gravity="end"
                android:textAppearance="@style/normal_text"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <Button
            android:id="@+id/butOrderRate"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_above="@+id/butOrderComplaint"
            android:text="@string/dialog_rate_button"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/button_text"
            android:background="@drawable/blue_button"/>

        <Button
            android:id="@+id/butOrderComplaint"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_complaint_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/button_text"
            android:background="@drawable/red_button"/>

    </RelativeLayout>

</RelativeLayout>