<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="21dp"
    android:paddingRight="21dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/modal_what_to_do_title"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:textAppearance="@style/sectitle"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="@string/dialog_what_to_do"/>

    <Button
        android:id="@+id/butDisableProduct"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/first_button"
        android:layout_below="@+id/modal_what_to_do_title"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/button_text"
        android:text="@string/dialog_disable"/>

    <Button
        android:id="@+id/butDeleteProduct"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/red_button"
        android:layout_below="@+id/butDisableProduct"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/button_text"
        android:text="@string/dialog_delete_button"/>

</RelativeLayout>