<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PurchaseListFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/teviPLTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p_list_title"
        android:textAppearance="@style/sectitle"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <ListView
        android:id="@+id/liviPL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teviPLTitle"
        tools:listitem="@layout/item_category">
    </ListView>

    <Button
        android:id="@+id/butOrderReq"
        android:layout_below="@+id/liviPL"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/first_button"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/order_request_button"
        android:textAppearance="@style/button_text"/>

    <Button
        android:id="@+id/butMeetingReq"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/butOrderReq"
        android:background="@drawable/second_button"
        android:layout_marginTop="5dp"
        android:text="@string/date_request_button"
        android:textAppearance="@style/button_text"/>


</RelativeLayout>