<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:minWidth="350dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="21dp"
        android:paddingTop="30dp"
        android:paddingRight="21dp"
        android:paddingBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/relaProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/teviReceptionDate"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/dialog_product_name"
                android:textAppearance="@style/modal_field_text" />

            <EditText
                android:background="@android:color/transparent"
                android:id="@+id/eteProductName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:hint="@string/ete_product_name"
                android:textAlignment="viewEnd" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iviProductName"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/relaProductName"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/relaProductQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iviProductName"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/teviProductQuantity"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/dialog_product_quantity"
                android:textAppearance="@style/modal_field_text" />

            <EditText
                android:text="0"
                android:textAlignment="viewEnd"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:id="@+id/eteProductQuantity"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="end" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iviProductQuantity"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/relaProductQuantity"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/relaMeasurementUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iviProductQuantity"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/teviMeasurementUnit"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/dialog_measurement_unit"
                android:textAppearance="@style/modal_field_text" />

            <Spinner
                android:id="@+id/eteMeasurementUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:entries="@array/measurement_unit"
                android:gravity="end"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iviMeasurementUnit"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/relaMeasurementUnit"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/relaMeasurementQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iviMeasurementUnit"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/teviMeasurementQuantity"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/dialog_measurement_quantity"
                android:textAppearance="@style/modal_field_text" />

            <EditText
                android:inputType="number"
                android:background="@android:color/transparent"
                android:text="0"
                android:textAlignment="viewEnd"
                android:id="@+id/eteMesurementQuantity"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="end" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iviMeasurementQuantity"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/relaMeasurementQuantity"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/relaDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iviMeasurementQuantity"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/teviDetail"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_detail"
                android:textAppearance="@style/modal_field_text" />

            <EditText
                android:background="@android:color/transparent"
                android:id="@+id/eteDetail"
                android:layout_width="250dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:hint="@string/dialog_detail_hint"
                android:textAlignment="viewEnd" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iviDetail"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/relaDetail"
            android:background="#000000" />


        <TextView
            android:id="@+id/teviRequestPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/dialog_product_preview" />

        <Button
            android:id="@+id/butOrderDialog"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_below="@+id/teviRequestPreview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/second_button"
            android:text="@string/dialog_add_product"
            android:textAppearance="@style/button_text" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>