<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:minWidth="360dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="21dp"
        android:paddingTop="30dp"
        android:paddingRight="21dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/modal_complaint_confirmation_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingVertical="15dp"
            android:text="@string/dialog_sorry_text"
            android:textAlignment="center"
            android:textAppearance="@style/modal_text" />

        <Button
            android:id="@+id/butCancel"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_below="@+id/modal_complaint_confirmation_text"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="5dp"
            android:background="@drawable/first_button"
            android:text="@string/dialog_cancel_button"
            android:textAppearance="@style/button_text" />

        <Button
            android:id="@+id/butComplaint"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_below="@+id/butCancel"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="5dp"
            android:background="@drawable/red_button"
            android:text="@string/dialog_complaint_button"
            android:textAppearance="@style/button_text" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>