<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:minWidth="360dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="21dp"
        android:paddingTop="30dp"
        android:paddingRight="21dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/modal_complaint_detail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingVertical="5dp"
            android:text="@string/dialog_what_happened"
            android:textAlignment="center"
            android:textAppearance="@style/sectitle" />

        <EditText
            android:id="@+id/eteComplaintDetail"
            android:background="@android:color/transparent"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_below="@+id/modal_complaint_detail_text"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="5dp"
            android:hint="@string/dialog_complaint_hint" />

        <ImageView
            android:id="@+id/iviComplaintDetail"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_below="@id/eteComplaintDetail"
            android:layout_marginBottom="20dp"
            android:background="#000000" />

        <Button
            android:id="@+id/butComplaintDetail"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_below="@+id/iviComplaintDetail"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="10dp"
            android:background="@drawable/red_button"
            android:text="@string/dialog_complaint_button"
            android:textAppearance="@style/button_text" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>